# ai-de-upskill

./: .gitignore  .pre-commit-config.yaml  DEV_COMMANDS.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
ai_rag_app/: ui_app.py
ai_rag_app/data/docs/: sample.md  table_glossary.md
ai_rag_app/data/qa/: qa.yml
ai_rag_app/src/: config.py  eval.py  eval_runner.py  index_docs.py  mlflow_utils.py  rag_chain.py  retriever.py  service.py  sweep.py
ai_rag_app/tests/: conftest.py  test_ask.py  test_eval_metrics.py  test_index_docs.py  test_rag.py  test_service.py
ai_rag_app/ui/: app.py
ai_rag_app/ui/web/: index.html
de_pipeline/: app.py
de_pipeline/flows/: flow.py
de_pipeline/src/: ingest.py  metrics.py  mlflow_logger.py  transform.py
de_pipeline/tests/: test_ingest_cache.py  test_quality.py
