[project]
name = "ai-de-upskill"
version = "0.1.0"
description = "Two-week AI + data engineering upskill workspace (local-first)"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "polars>=1.9.0",
    "duckdb>=1.1.0",
    "prefect>=2.16.0",
    "pandera[polars]>=0.20.0",
    "matplotlib>=3.8.0",
    "streamlit>=1.36.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "chromadb>=0.5.4",
    "sentence-transformers>=2.7.0",
    "langchain>=0.2.16",
    "pypdf>=4.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.6.8",
    "black>=24.8.0",
    "pre-commit>=3.8.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["de_pipeline/tests", "ai_rag_app/tests"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.uv.scripts]
test = "pytest -q"
de-app = "streamlit run de_pipeline/app.py"
flow = "python -m de_pipeline.flows.flow"
rag-serve = "uvicorn ai_rag_app.src.service:app --reload"
rag-ui = "streamlit run ai_rag_app/ui_app.py"
rag-index = "python -m ai_rag_app.src.index_docs"
lint = "ruff check . && black --check ."
fmt = "ruff check . --fix && black ."
