[project]
name = "ai-de-upskill"
version = "0.1.0"
description = "Two-week AI + data engineering upskill workspace (local-first)"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "polars>=1.9.0",
    "duckdb>=1.1.0",
    "prefect>=2.16.0",
    "pandera[polars]>=0.20.0",
    "matplotlib>=3.8.0",
    "streamlit>=1.36.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "chromadb>=0.5.4",
    "sentence-transformers>=2.7.0",
    "langchain>=0.2.16",
    "pypdf>=4.3.1",
    "mlflow>=3.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.6.8",
    "black>=24.8.0",
    "pre-commit>=3.8.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["de_pipeline/tests", "ai_rag_app/tests"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ai_rag_app", "de_pipeline"]
